feat: add user profile update endpoint and enhance user model
- Updated User model to include additional fields: Firstname, Lastname, Gender, PhoneNumber, ProfilePictureURL, and Address.
- Added a new endpoint for updating user profiles in the router.
- Introduced password package for password hash comparison.
- Updated Swagger documentation to include security definitions.
- Changed Swagger endpoint from "/swagger/*" to "/docs/*".
- Added seeder scripts for populating the database with sample data for users, films, schedules, tickets, and payments.
- Updated go.mod and go.sum to include necessary dependencies.
